--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600;700&display=swap');
 
 body {
   background-color: #303A57;
-  /*background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23384363' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23414d6f' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%2349567b' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23526087' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%235A6993' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23384363' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23414d6f' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%2349567b' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23526087' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%235A6993' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
-  background-size: cover;*/
+  background-size: cover;
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -14,7 +15,7 @@ body {
 .title-1 {
   color: #dddddd;
   font-size: 30px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .app-container {
