--- a/src/pages/projects/styles.module.css
+++ b/src/pages/projects/styles.module.css
@@ -6,17 +6,19 @@
 }
 
 .project_card {
-  background-color: rgba(0, 0, 0, 0.2);
+  /*background-color: rgba(0, 0, 0, 0.2);*/
   height: 300px;
-  max-width: 320px;
+  max-width: 318px;
   padding: 35px 30px 35px 30px;
   flex: 50%;
   margin-top: 20px;
   border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .project_card:hover {
-  box-shadow: inset 0 0 2px white;
+  /*box-shadow: inset 0 0 2px white;*/
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .header {
