--- a/src/pages/writings/styles.module.css
+++ b/src/pages/writings/styles.module.css
@@ -1,15 +1,17 @@
 .article_card {
   display: flex;
   margin-top: 30px;
-  background-color: rgba(0, 0, 0, 0.2);
+  /*background-color: rgba(0, 0, 0, 0.2);*/
   border-radius: 5px;
   padding: 15px 20px 15px 20px;
   text-decoration: none !important;
-  /*border: 1px solid white;*/
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
+
 .article_card:hover {
-  box-shadow: inset 0 0 2px white;
+  /*box-shadow: inset 0 0 2px white;*/
+  background-color: rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 
