--- a/src/pages/stats/styles.module.css
+++ b/src/pages/stats/styles.module.css
@@ -43,43 +43,81 @@
 }
 
 #stack_overflow .body {
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  width: 780px;
   margin-top: 10px;
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
-}
-
-#stack_overflow .body .right_box {
-  width: 370px;
-  border: 1px solid rgba(255, 255, 255, 0.23);
+  /*border: 1px solid rgb(255, 255, 255);*/
 }
 
 #stack_overflow .body .left_box {
-  width: 370px;
-  border: 1px solid rgba(255, 255, 255, 0.23);
+  width: 384px;
+  /*border: 1px solid rgb(255, 0, 0);*/
 }
 
-#stack_overflow .stat_card {
+#stack_overflow .reputation_card {
   font-family: 'Barlow Semi Condensed', sans-serif;
   height: 100px;
-  max-width: 300px;
-  padding: 25px 30px 35px 30px;
-  flex: 50%;
-  margin-top: 20px;
+  margin: 10px 0 0 10px;
+  max-width: 330px;
+  padding: 25px 0px 35px 30px;
   border-radius: 5px;
-  border: 1px solid rgba(255, 255, 255, 0.23);
+  border: 2px solid rgba(255, 255, 255, 0.23);
 }
 
-.tech_card {
+#stack_overflow .badges_card {
   font-family: 'Barlow Semi Condensed', sans-serif;
-  height: 250px;
-  max-width: 300px;
-  padding: 25px 30px 35px 30px;
-  flex: 50%;
-  margin-top: 20px;
+  height: 70px;
+  max-width: 330px;
+  margin: 15px 0 0 10px;
+  padding: 25px 0px 30px 30px;
   border-radius: 5px;
-  border: 1px solid rgba(255, 255, 255, 0.23);
+  border: 2px solid rgba(255, 255, 255, 0.23);
+}
+
+#stack_overflow .reputation_card .big_number {
+  margin-top: 7px;
+  font-size: 40px;
+  color: white;
+  font-weight: 700;
+}
+
+#stack_overflow .body .right_box {
+  width: 390px;
+  /*border: 1px solid rgb(185, 201, 7);*/
+}
+
+#stack_overflow .tech_card {
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  height: 244px;
+  max-width: 315px;
+  margin: 10px 0 0 5px;
+  padding: 25px 30px 35px 30px;
+  border-radius: 5px;
+  border: 2px solid rgba(255, 255, 255, 0.23);
+}
+
+#stack_overflow .tech_card .list {
+  margin-top: 17px;
+}
+
+#stack_overflow .tech_card .tag_box {
+  display: flex;
+}
+
+#stack_overflow .tech_card .name {
+  width: 50%;
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+#stack_overflow .score {
+  width: 50%;
+  font-size: 20px;
+  text-align: right;
+  color: white;
 }
 
 .card_title {
@@ -88,18 +126,10 @@
   font-size: 22px;
 }
 
-.big_number {
-  margin-top: 7px;
-  font-size: 40px;
-  color: white;
-  font-weight: 700;
-}
-
 .flex_box1 {
   display: flex;
   justify-content: flex-start;
   margin-top: 10px;
-  /*border: 1px solid white;*/
   font-size: 20px;
   color: rgba(255, 255, 255, 0.7);
 }
@@ -112,8 +142,7 @@
   display: flex;
   justify-content: flex-start;
   margin-top: 20px;
-  /*border: 1px solid white;*/
-  font-size: 25px;
+  font-size: 23px;
   color: white;
 }
 
@@ -130,20 +159,4 @@
 .flex_box2 .bronze {
   color: orange;
   opacity: 0.7;
-}
-
-#stack_overflow .tech_card .tag_box {
-  display: flex;
-}
-
-#stack_overflow .tech_card .name {
-  width: 50%;
-  font-size: 20px;
-  color: rgba(255, 255, 255, 0.8);
-}
-
-#stack_overflow .score {
-  width: 50%;
-  text-align: right;
-  color: white;
 }
