Made styling changes to projects page

--- a/src/global/components/navbar/styles.module.css
+++ b/src/global/components/navbar/styles.module.css
@@ -19,7 +19,7 @@
   border-radius: 5px;
   height: 65px;
   max-width: 780px;
-  background-color: rgba(0, 0, 0, 0.35);
+  background-color: #1e214a;
 }
 
 .items_container {
