--- a/src/global/layouts/header.module.css
+++ b/src/global/layouts/header.module.css
@@ -1,5 +1,9 @@
 #header {
   display: flex;
+  flex: 1;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+  font-size: 17px;
 }
 
 .left_box {
@@ -7,7 +11,7 @@
 }
 
 .right_box {
-  margin: 25px 0px 0px 0px;
+  margin: 45px 0px 0px 0px;
 }
 
 .right_box .title {
