--- a/src/pages/projects/components/projectList.module.css
+++ b/src/pages/projects/components/projectList.module.css
@@ -1,5 +1,8 @@
-.flex_wrapper {
-  margin-top: 10px;
+#project_list {
+  margin-top: 50px;
+}
+
+.row_wrap {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
