--- a/src/global/components/navbar/styles.module.css
+++ b/src/global/components/navbar/styles.module.css
@@ -2,6 +2,7 @@
 
 :root {
   --light-green: rgb(70, 201, 70);
+  --light-green-09: rgba(70, 201, 70, 0.9);
 }
 
 .wrapper {
@@ -16,11 +17,11 @@
 .main_container {
   display: flex;
   justify-content: center;
-  border-radius: 5px;
+  border-radius: 11px;
   height: 75px;
   max-width: 880px;
-  background-image: linear-gradient(#242755, #1e214a);
-  box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
+  /*border: 2px solid rgba(255, 255, 255, 0.2);*/
+  border: 5px solid rgba(255, 255, 255, 0.2);
 }
 
 .items_container {
@@ -60,6 +61,7 @@
 
 .selected {
   opacity: 1;
+  background-color: rgba(255, 255, 255, 0.07);
   color: var(--light-green) !important;
 }
 
@@ -111,8 +113,8 @@
 }
 
 .railway_container {
-  margin-top: -2px;
-  height: 2px;
+  margin-top: -5px;
+  height: 5px;
   position: relative;
   width: 880px;
 }
@@ -121,8 +123,8 @@
   position: absolute;
   z-index: 1;
   width: 164px;
-  height: 2px;
-  background: var(--light-green);
+  height: 5px;
+  background: var(--light-green-09);
   transition: 200ms;
 }
 
