--- a/src/global/layouts/header.module.css
+++ b/src/global/layouts/header.module.css
@@ -1,9 +1,11 @@
 #header {
   display: flex;
+  padding: 20px 20px 20px 0;
+  min-height: 310px;
+  max-height: 310px;
   flex: 1;
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
-  font-size: 17px;
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-radius: 11px;
 }
 
 .left_box {
@@ -23,6 +25,22 @@
 }
 
 .right_box .about {
-  color: #ddd;
   margin: 20px 20px 0px 0px;
+  padding: 10px 30px 30px 30px;
+  text-align: justify;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 17px;
+  font-weight: 400;
+}
+
+.latest_label {
+  width: 80px;
+  margin: 23px 0px 0px 0px;
+  padding: 3px 0px 3px 0px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 18px;
+  font-weight: 300;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
