--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -14,23 +14,19 @@
 }
 
 .header .right_box {
+  background-color: rgba(255, 255, 255, 0.07);
   padding: 10px 30px 30px 30px;
-  cursor: pointer;
   transition: 200ms;
   /*border: 2px solid rgba(255, 255, 255, 0.2);*/
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.07);
+  /*background-color: rgba(255, 255, 255, 0.08);*/
 }
 
 .header .right_box .title_wrapper {
   margin: 0px 0px 0px 0px;
 }
 
-.header .right_box:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-}
-
-.header .latest_label {
+.header .label {
   width: 80px;
   margin: 23px 0px 0px 0px;
   padding: 3px 0px 3px 0px;
@@ -49,9 +45,11 @@
   font-weight: 700;
 }
 
-.header .right_box .opening_sentence {
-  margin: 15px 0px 0px 0px;
-  color: rgba(255, 255, 255, 0.5);
+.header .right_box .about {
+  margin: 20px 0px 0px 0px;
+  color: rgba(255, 255, 255, 0.6);
+  text-align: left;
+  line-height: 22px;
   font-size: 17px;
   font-weight: 400;
 }
