--- a/src/pages/projects/projects.module.css
+++ b/src/pages/projects/projects.module.css
@@ -1,61 +1,54 @@
-#gallery {
+#pinned {
   /*border: 1px solid white;*/
-  margin: 30px 0 0 0;
-}
-
-#gallery .first_row {
-  /*border: 1px solid white;*/
-}
-
-#gallery .second_row {
+  margin: 60px 0 0 0;
   display: flex;
-  /*border: 1px solid white;*/
-}
-
-#gallery .first_row .image_wrapper {
-  margin: 0px 0px 10px 0;
-  height: 450px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  /*border-radius: 5px;*/
-  border: 1px solid transparent;
-}
-
-#gallery .second_row .left_image_wrapper {
+  border-radius: 11px;
+  background-color: rgba(255, 255, 255, 0.07);
+  padding: 20px;
   flex: 1;
-  margin: 0px 10px 0px 0px;
-  height: 270px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+}
+
+#pinned .details_box {
+  margin: 0 10px 0 10px;
+  padding: 10px;
+  flex-grow: 1;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  border-radius: 11px;
+}
+
+#pinned .image_box {
   overflow: hidden;
-  /*border-radius: 5px;*/
-  border: 1px solid transparent;
+  width: 600px;
+  height: 350px;
+  border-radius: 11px;
 }
 
-#gallery .second_row .right_image_wrapper {
-  width: 400px;
-  height: 270px;
+#pinned .image_box img {
+  width: 600px;
+}
+
+#pinned .name_box {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  /*border-radius: 5px;*/
-  border: 1px solid transparent;
 }
 
-#gallery .first_row img {
-  width: 900px;
+#pinned .name_box .folder_icon {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 20px;
 }
 
-img {
-  cursor: pointer;
-  transition: 300ms;
-  opacity: 0.8;
+#pinned .name_box .name {
+  font-size: 18px;
+  margin: 0 0 0 10px;
+  color: rgba(255, 255, 255, 0.7);
+  /* text-transform: capitalize;*/
 }
 
-img:hover {
-  opacity: 1;
+#pinned .about {
+  margin-top: 20px;
+  text-align: justify;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 15px;
+  line-height: normal;
+  max-width: 200px;
 }
