--- a/src/global/layouts/sectionTitle.module.css
+++ b/src/global/layouts/sectionTitle.module.css
@@ -1,36 +1,29 @@
 #section_title {
+  margin: 20px auto 0px auto;
+  width: 95%;
+}
+
+.wrapper {
   display: flex;
-  align-items: center;
-  margin: 0px 0 30px 33px;
-  /*border: 1px solid white;*/
+  width: 50%;
+  margin: 0 0 25px 20px;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
 
-.svg_box {
-  font-size: 25px;
+.text_style_one {
   color: #eee;
+  font-family: roboto;
+  font-size: 40px;
+  margin: 50px 0 0 9px;
+  font-weight: 700;
 }
 
-.title {
-  font-style: italic;
+.text_style_two {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: 'Times New Roman', Times, serif;
   font-size: 19px;
-  text-transform: capitalize;
-  color: #eee;
-}
-
-.short_middle_line {
-  width: 20px;
-  height: 1px;
-  margin-left: 15px;
-  margin-right: 15px;
-  border-bottom: 1px solid #eee;
-  opacity: 0.35;
-}
-
-.middle_line {
-  flex: 1;
-  height: 1px;
-  margin-left: 15px;
-  margin-right: 38px;
-  border-bottom: 1px solid #eee;
-  opacity: 0.35;
+  line-height: 20px;
+  margin: 70px 0 0 10px;
+  font-weight: 400;
+  font-style: italic;
 }
