--- a/src/pages/writings/components/filterByTopics.module.css
+++ b/src/pages/writings/components/filterByTopics.module.css
@@ -1,47 +1,12 @@
 #filterByTopic {
+  display: flex;
   margin: 20px auto 0px auto;
-  width: 95%;
-}
-
-.title_wrapper {
-  display: flex;
-  width: 50%;
-  margin: 0 0 25px 20px;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
-}
-
-.title_wrapper .text_style_one {
-  color: #eee;
-  font-family: roboto;
-  font-size: 40px;
-  margin: 50px 0 0 9px;
-  font-weight: 700;
-}
-
-.title_wrapper .text_style_two {
-  color: rgba(255, 255, 255, 0.7);
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 19px;
-  line-height: 20px;
-  margin: 70px 0 0 10px;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.topics_wrapper {
-  display: flex;
-  width: 95%;
-  margin: 0 auto;
   padding: 0px 0px 20px 0px;
-  /*border: 1px solid white;*/
+  width: 95%;
   flex-wrap: wrap;
 }
 
-#list {
-  margin: 30px 0px 0px 0px;
-}
-
-.topics_wrapper>div {
+#filterByTopic>div {
   flex: 1 0 130px;
   max-width: 130px;
   margin: 10px;
@@ -57,6 +22,6 @@
   text-transform: uppercase;
 }
 
-.topics_wrapper>div:hover {
+#filterByTopic>div:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
