--- a/src/global/layouts/sectionTitle.module.css
+++ b/src/global/layouts/sectionTitle.module.css
@@ -5,7 +5,8 @@
 
 .wrapper {
   display: flex;
-  flex-wrap: wrap;
+  width: 55%;
+  min-width: 450px;
   margin: 0 0 25px 20px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
