--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,46 +1,16 @@
 #home {
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60vh;
-  /*border: 1px solid white;*/
+  /*border: 1px solid rgb(124, 247, 1, 0.5);*/
+  /*border-radius: 11px;*/
 }
 
-.box_for_centering {
-  /*border: 1px solid white;*/
-}
-
-.svg {
-  width: 100%;
-  height: 320px;
-}
-
-.wrapper {
-  width: 100%;
-  text-align: center;
-}
-
-.title {
-  font-family: 'Roboto', sans-serif;
-  font-size: 52px;
-  font-weight: 600;
-  color: white;
-}
-
-.subtitle {
-  margin: -10px 0 0 0;
-  font-size: 16px;
-  font-weight: 300;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.buttons_wrapper {
-  display: flex;
-  margin-top: 20px;
-  justify-content: center;
-}
-
-.buttons_wrapper>* {
-  margin: 0px 7px 0px 7px;
+.image_wrapper {
+  flex: 1;
+  min-height: 350px;
+  max-height: 350px;
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-radius: 11px;
+  background-position: center;
+  background-size: cover;
 }
