--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -5,6 +5,8 @@
   padding: 20px 20px 20px 0;
   border: 5px solid rgba(255, 255, 255, 0.2);
   border-radius: 11px;
+  background-size: cover;
+  background-position: center;
 }
 
 .left_box {
@@ -12,11 +14,13 @@
 }
 
 .right_box {
+  min-width: 45%;
+  max-width: 45%;
   padding: 10px 30px 30px 30px;
   cursor: pointer;
   transition: 200ms;
   border-radius: 6px;
-  background-color: rgba(255, 255, 255, 0.07);
+  background-color: rgba(21, 21, 21, 0.87);
 }
 
 .right_box:hover {
