--- a/src/pages/home/components/latest.module.css
+++ b/src/pages/home/components/latest.module.css
@@ -9,7 +9,8 @@
   padding: 35px 30px 35px 30px;
   color: white;
   border-radius: 5px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .event_container {
