--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,15 +1,14 @@
 #home {
   width: 100%;
-  display: flex;
   /*border: 1px solid rgb(124, 247, 1, 0.5);*/
   /*border-radius: 11px;*/
 }
 
 .image_wrapper {
   flex: 1;
-  min-height: 350px;
-  max-height: 350px;
-  border: 5px solid rgba(255, 255, 255, 0.2);
+  min-height: 310px;
+  max-height: 310px;
+  border: 5px solid #3d4c61;
   border-radius: 11px;
   background-position: center;
   background-size: cover;
