--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -29,12 +29,17 @@
   padding: 10px 20px 10px 20px;
 }
 
-.arrow_wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 85px;
-  font-size: 60px;
+.vertical_text {
+  width: 20px;
+  margin: 20px auto 20px auto;
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  color: white !important;
+}
+
+.tab {
+  text-align: center;
+  width: 75px;
   height: 310px;
   transition: 500ms;
   animation-name: waver;
@@ -43,7 +48,7 @@
   color: white;
 }
 
-.arrow_wrapper>* {
+.tab>* {
   cursor: pointer;
 }
 
