--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -25,13 +25,13 @@
   height: 300px;
   color: white;
   font-size: 14px;
-  border-right: 1px solid rgb(61, 76, 97, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.1);*/
   padding: 10px 20px 10px 20px;
   cursor: pointer;
 }
 
 .content_wrapper:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.15);
 }
 
 .vertical_text {
