--- a/src/pages/projects/layouts/pinnedProject.module.css
+++ b/src/pages/projects/layouts/pinnedProject.module.css
@@ -1,8 +1,9 @@
 #pinned {
-  margin: 60px 0 0 0;
+  margin: 45px 0 0 0;
   display: flex;
-  border-radius: 11px;
-  background-color: rgba(255, 255, 255, 0.07);
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
   padding: 30px;
   flex: 1;
 }
@@ -11,7 +12,7 @@
   overflow: hidden;
   width: 580px;
   height: 320px;
-  border-radius: 11px;
+  border-radius: 5px;
   opacity: 0.85;
   transition: 400ms;
   cursor: pointer;
