--- a/src/pages/stats/components/SO/children/reputation.module.css
+++ b/src/pages/stats/components/SO/children/reputation.module.css
@@ -5,7 +5,8 @@
   max-width: 330px;
   padding: 25px 0px 35px 30px;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.07);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .title {
