--- a/src/pages/writings/components/articlesList.module.css
+++ b/src/pages/writings/components/articlesList.module.css
@@ -2,18 +2,19 @@
   flex: 1;
   margin-top: 40px;
   padding: 40px;
-  border-radius: 11px;
+  border-radius: 5px;
   transition: 200ms;
-  background-color: rgba(255, 255, 255, 0.07);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
 .card:hover {
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: rgb(130, 47, 255, 0.2);
 }
 
 .title {
-  color: rgba(142, 230, 249, 0.8);
+  color: rgba(19, 255, 255, 0.7);
   font-size: 23px;
   font-weight: 600;
 }
