--- a/src/pages/writings/components/filterByTopics.module.css
+++ b/src/pages/writings/components/filterByTopics.module.css
@@ -16,12 +16,12 @@
   font-weight: 500;
   font-size: 14px;
   border-radius: 9999px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(0, 0, 0, 0.3);
   transition: 100ms;
   cursor: pointer;
   text-transform: uppercase;
 }
 
 #filterByTopic>div:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgb(130, 47, 255, 0.7);
 }
