--- a/src/global/components/navbar/navbar.module.css
+++ b/src/global/components/navbar/navbar.module.css
@@ -1,26 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap');
-
-:root {
-  --light-green: rgb(70, 201, 70);
-  --light-green-09: rgba(70, 201, 70, 0.9);
-}
-
-.wrapper {
+#navbar {
   margin: 0 auto;
-  padding: 10px;
   min-width: 240px;
   max-width: 880px;
   transition: 500ms;
-  /*border: 1px solid white;*/
 }
 
-.main_container {
+.wrapper {
   display: flex;
   justify-content: center;
   border-radius: 11px;
   height: 75px;
   max-width: 880px;
-  /*border: 2px solid rgba(255, 255, 255, 0.2);*/
   border: 5px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -124,7 +114,7 @@
   z-index: 1;
   width: 164px;
   height: 5px;
-  background: var(--light-green-09);
+  background: var(--light-green);
   transition: 200ms;
 }
 
