--- a/src/global/layouts/sectionTitle.module.css
+++ b/src/global/layouts/sectionTitle.module.css
@@ -1,13 +1,14 @@
 #section_title {
-  margin: 20px auto 0px auto;
+  margin: var(--section-title-margin);
   width: 95%;
+  /*border: 1px solid white;*/
 }
 
 .wrapper {
   display: flex;
   width: 55%;
   min-width: 450px;
-  margin: 0 0 25px 20px;
+  margin: 0 0 15px 20px;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -16,7 +17,7 @@
   color: #eee;
   font-family: roboto;
   font-size: 40px;
-  margin: 50px 0 0 9px;
+  margin: 10px 0 0 9px;
   font-weight: 700;
 }
 
@@ -25,7 +26,7 @@
   font-family: 'Times New Roman', Times, serif;
   font-size: 19px;
   line-height: 20px;
-  margin: 70px 0 0 10px;
+  margin: 30px 0 0 10px;
   font-weight: 400;
   font-style: italic;
 }
