--- a/src/pages/home/components/latest/latest.module.css
+++ b/src/pages/home/components/latest/latest.module.css
@@ -1,11 +1,5 @@
-.title {
-  color: var(--white);
-  font-size: 30px;
-  text-align: center;
-}
-
-.main_wrapper {
-  margin: 45px 0px 100px 0px;
+#latest_events {
+  margin: 0px 0px 100px 0px;
   padding: 35px 30px 35px 30px;
   color: var(--white);
   border-radius: 5px;
@@ -13,7 +7,7 @@
   background-color: var(--dark-transparent-two);
 }
 
-.event_container {
+.event_wrapper {
   display: flex;
   width: 700px;
   padding-top: 30px;
@@ -22,11 +16,11 @@
   cursor: pointer;
 }
 
-.event_container:hover {
+.event_wrapper:hover {
   background-color: var(--white-transparent-one);
 }
 
-.event_container .icon_box {
+.icon_box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,11 +28,6 @@
   min-width: 70px;
 }
 
-.event_container .context_box {
-  font-size: 14px;
-  opacity: 0.7;
-}
-
-.event_container .detail_box {
+.detail_box {
   font-size: 17px;
 }
