--- a/src/global/components/navbar/navbar.module.css
+++ b/src/global/components/navbar/navbar.module.css
@@ -2,16 +2,22 @@
   margin: 0 auto;
   min-width: 240px;
   max-width: 880px;
+  height: 75px;
   transition: 500ms;
+  background-color: #273346;
+  border-radius: var(--border-radius-one);
+  border-left: 8px solid #4f6b7e;
+  border-right: 8px solid #4f6b7e;
+  border-top: 4px solid #3c5262;
+  border-bottom: 4px solid #3c5262;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /*box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;*/
 }
 
 .wrapper {
   display: flex;
   justify-content: center;
-  border-radius: 11px;
-  height: 75px;
-  max-width: 880px;
-  border: 5px solid rgba(255, 255, 255, 0.2);
+
 }
 
 .items_container {
@@ -103,7 +109,7 @@
 }
 
 .railway_container {
-  margin-top: -5px;
+  margin-top: 0px;
   height: 5px;
   position: relative;
   width: 880px;
@@ -113,7 +119,8 @@
   position: absolute;
   z-index: 1;
   width: 164px;
-  height: 5px;
+  height: 4px;
+  opacity: 0.6;
   background: var(--light-green);
   transition: 200ms;
 }
