--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -4,7 +4,8 @@
 
 :root {
   /* margins */
-  --top-section-margin: 20px 0 0 0;
+  --app-container-margin: 30px auto;
+  --top-section-margin: 30px 0 0 0;
   --page-section-margin: 40px 0 0 0;
   --section-title-margin: 40px auto 50px auto;
 
@@ -19,7 +20,7 @@
 
   /* global styles */
   --header-height: 320px;
-  --border-radius-one: 11px;
+  --border-radius-one: 3px;
 
   /* animation related */
   --slide-transition: 500ms;
@@ -27,21 +28,22 @@
 }
 
 body {
-  background-color: #0d1f3a;
+  background-color: #092b41;
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#app-container {
-  margin: 0 auto;
-  max-width: 900px;
-  height: 100vh;
-  /* border: 1px solid white;*/
+.app-container {
+  margin: var(--app-container-margin);
+  width: 970px;
+  height: auto;
+  /*background-color: rgba(0, 0, 0, 0.2);*/
+  /*border: 1px solid white;*/
 }
 
-#top {
+.app-container .top {
   margin: var(--top-section-margin);
   /*border: 1px solid white;*/
 }
