--- a/src/pages/home/components/header.module.css
+++ b/src/pages/home/components/header.module.css
@@ -1,11 +1,17 @@
 #header {
+  margin: 0 auto;
   height: var(--header-height);
-  border: 5px solid var(--slate);
-  border-radius: var(--border-radius-one);
+  max-width: 880px;
   background-image: url('../../../global/assets/images/cyberpunk_1.webp');
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
+  border-radius: var(--border-radius-one);
+  border-left: 8px solid #4f6b7e;
+  border-right: 8px solid #4f6b7e;
+  border-top: 4px solid #3c5262;
+  border-bottom: 4px solid #3c5262;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .movable_box {
