--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -1,20 +1,25 @@
 #header {
   display: flex;
+  margin: 0 auto;
   justify-content: flex-end;
-  min-height: 320px;
-  max-height: 320px;
-  border: 5px solid #3d4c61;
-  border-radius: 11px;
+  height: var(--header-height);
+  max-width: 880px;
   background-image: url('../../../global/assets/images/cyberpunk_3.gif');
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
+  border-radius: var(--border-radius-one);
+  border-left: 8px solid #4f6b7e;
+  border-right: 8px solid #4f6b7e;
+  border-top: 4px solid #3c5262;
+  border-bottom: 4px solid #3c5262;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .movable_box {
   display: flex;
   width: 300px;
-  height: 320px;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   transition: 500ms;
   border-right: 1px solid rgb(61, 76, 97, 0.5);
