--- a/src/pages/writings/components/header.module.css
+++ b/src/pages/writings/components/header.module.css
@@ -1,14 +1,19 @@
 #header {
+  margin: 0 auto;
   display: flex;
   justify-content: flex-end;
-  min-height: 320px;
-  max-height: 320px;
-  border: 5px solid #3d4c61;
-  border-radius: 11px;
+  max-width: 880px;
+  height: var(--header-height);
   background-image: url('../../../global/assets/images/cyberpunk_2.gif');
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
+  border-radius: var(--border-radius-one);
+  border-left: 8px solid #4f6b7e;
+  border-right: 8px solid #4f6b7e;
+  border-top: 4px solid #3c5262;
+  border-bottom: 4px solid #3c5262;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .movable_box {
