--- a/src/global/styles.css
+++ b/src/global/styles.css
@@ -4,10 +4,10 @@
 
 :root {
   /* margins */
-  --app-container-margin: 30px auto;
-  --top-section-margin: 30px 0 0 0;
+  --app-container-margin: 0 auto;
+  --top-section-margin: 20px 0 0 0;
   --page-section-margin: 40px 0 0 0;
-  --section-title-margin: 40px auto 50px auto;
+  --section-title-margin: 40px auto 15px auto;
 
   /* colors */
   --light-green: rgba(70, 201, 70);
@@ -28,7 +28,7 @@
 }
 
 body {
-  background-color: #092b41;
+  background-color: #0d1f3a;
   margin: 0;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
