--- a/src/pages/home/components/header.module.css
+++ b/src/pages/home/components/header.module.css
@@ -11,7 +11,8 @@
   border-right: 8px solid #4f6b7e;
   border-top: 4px solid #3c5262;
   border-bottom: 4px solid #3c5262;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /*box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;*/
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .movable_box {
