--- a/src/pages/projects/components/header.module.css
+++ b/src/pages/projects/components/header.module.css
@@ -3,16 +3,13 @@
   margin: 0 auto;
   justify-content: flex-end;
   height: var(--header-height);
-  max-width: 880px;
+  max-width: 876px;
   background-image: url('../../../global/assets/images/cyberpunk_3.gif');
   background-position: center;
   background-size: cover;
   overflow-x: hidden;
   border-radius: var(--border-radius-one);
-  border-left: 8px solid #4f6b7e;
-  border-right: 8px solid #4f6b7e;
-  border-top: 4px solid #3c5262;
-  border-bottom: 4px solid #3c5262;
+  border: 2px solid rgb(0, 237, 250, 0.3);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -30,8 +27,6 @@
   height: 300px;
   color: white;
   font-size: 14px;
-  border-right: 1px solid rgb(61, 76, 97, 0.5);
-  padding: 10px 20px 10px 20px;
 }
 
 .vertical_text {
@@ -45,7 +40,7 @@
 .tab {
   text-align: center;
   width: 75px;
-  height: 310px;
+  height: 100%;
   transition: 500ms;
   animation-name: waver;
   animation-duration: 2s;
